# Doves

./: BuiltInFuncs.cpp  BuiltInFuncs.h  BuiltInStatements.cpp  BuiltInStatements.h  BuiltInStructs.cpp  BuiltInStructs.h  BuiltInStructs_Thread.cpp  CMakeLists.txt  Exception.h  Expression.cpp  Expression.h  HashTable.cpp  HashTable.h  README.md  TableTypes.h  WordReader.cpp  WordReader.h  dlltest.c  main.cpp  parser.cpp  parser.h  textencoding.cpp  textencoding.h  var.cpp  var.h
Release/Test demos/: homework1.dov  homework10.dov  homework11.dov  homework12.dov  homework13.dov  homework2.dov  homework3.dov  homework4.dov  homework5.dov  homework6.dov  homework7.dov  homework8.dov  homework9.dov  printsetup.dov  speedtest.dov  test.dov  test01_expression.dov  test02_string.dov  test03_var_ref.dov  test04_array.dov  test05_if.dov  test06_select.dov  test07_loop.dov  test08_function.dov  test09_exception.dov  test10_struct.dov  test11_struct_2.dov  test12_struct_3.dov  test12_struct_3c.sgc  test13_struct_4.dov  test14_polymorphy.dov  test15_module.dov  test16_datetime.dov  test17_binary.dov  test18_dll.dov  test19_thread.dov  test20.dov  test21_dim.dov  test22_anonymous_array.dov  test23_fn_dot.dov  (+2 more)
Release/Ubuntu20/: doves
Release/macOS Monterey/: doves
docs/: Doves Language Reference.md  expression.txt
